--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,7 +42,7 @@ th {
 }
 
 body {
-  background: url("/images/stressed_linen.png");
+  /*background: url("/images/stressed_linen.png");*/
   /*background-image: url('/images/bird-sketch1.png');*/
   font-family: Futura;
   overflow:hidden;
