compressed background image

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,5 +6,5 @@
 <% end %>
 </div>
 </div>
-<%= image_tag("bird-sketch1.png", :class => 'giant_pic') %>
+<%= image_tag("bird-sketch1.jpg", :class => 'giant_pic') %>
 <span class="intro_text">Rapper or Bird</span>
