--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,10 +42,15 @@ th {
 }
 
 body {
-  /*background: url("/images/stressed_linen.png");*/
-  /*background-image: url('/images/bird-sketch1.png');*/
   font-family: Futura;
   overflow:hidden;
+}
+
+.bird-background {
+  background-image: url('bird-sketch1.jpg');
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
 }
 
 input {
@@ -180,16 +185,9 @@ input:focus {
     position: absolute;
 }
 
-.giant_pic {
-    margin-left: -400px;
-}
-
 .intro_text {
     font-family: PlainBlackWide;
     font-size:100px;
-    position:absolute;
-    left:550px;
-    top:100px;
 }
 
 .tweet {
@@ -199,9 +197,6 @@ input:focus {
 }
 
 .login-form {
-    top: 230px;
-    left: 57%;
-    position: absolute;
 }
 
 input[type=submit].splash-submit {
@@ -247,4 +242,4 @@ display:inline-block;
 position: absolute;
 left:288px;
 display:block;
-}
+} *= require foundation_and_overrides
