--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require bootstrap_and_overrides
  */
 
 html, body {
@@ -51,6 +51,7 @@ body {
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+  padding-top: 30px;
 }
 
 input {
@@ -186,8 +187,31 @@ input:focus {
 }
 
 .intro_text {
+    margin-top: 30px;
     font-family: PlainBlackWide;
-    font-size:100px;
+    font-size:300%;
+}
+
+@media only screen and (max-width : 320px) {
+  .intro_text {
+    font-size:300%;
+  }
+  .bird-background {
+    background-image: url('iphone5_back.jpg');
+  }
+}
+
+@media only screen and (min-width : 481px) and (max-width : 799px) {
+  .intro_text {
+    font-size:300%;
+  }
+}
+
+
+@media only screen and (min-width: 800px) {
+  .intro_text {
+    font-size:400%;
+  }
 }
 
 .tweet {
@@ -242,4 +266,9 @@ display:inline-block;
 position: absolute;
 left:288px;
 display:block;
-} *= require foundation_and_overrides
+}
+
+body {
+    margin: 0 auto;
+    max-width: 1600px;
+}
