--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,13 @@
 <div class="bird-background">
-  <div class="login-form">
-    <div class="form">
+  <div class="row-fluid">
+    <div class="span4 offset8 intro_text">Rapper or Bird</div>
+  </div>
+  <div class="row-fluid login-form">
+    <div class="span4 offset8 form">
       <%= form_for :game, url: games_path do |f| %>
         <%= f.text_field :text, placeholder: "Your Name", :autofocus=>true%>
         <%= f.submit "Start game", class: "btn splash-submit" %>
       <% end %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="large-6 large-centered columns">
-      <span class="intro_text">Rapper or Bird</span>
     </div>
   </div>
 </div>
