--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,17 +22,18 @@ html, body {
 
 @font-face {
     font-family: "Graffonti";
-    src: url('/fonts/graffonti.ttf');
+    src: url('graffonti.ttf');
 }
 
 @font-face {
-    font-family: "Futura";
-    src: url('/fonts/Futura.ttc');
-}
-
-@font-face {
-    font-family: "PlainBlackWide";
-    src: url('/fonts/PlainBlackWide.ttf');
+    font-family: 'bebas_neueregular';
+    src: url('bebasneue-webfont.eot');
+    src: url('bebasneue-webfont.eot?#iefix') format('embedded-opentype'),
+         url('bebasneue-webfont.woff') format('woff'),
+         url('bebasneue-webfont.ttf') format('truetype'),
+         url('bebasneue-webfont.svg#bebas_neueregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .container {
@@ -46,7 +47,7 @@ th {
 }
 
 body {
-  font-family: Futura;
+  font-family: bebas_neueregular;
   overflow:hidden;
 }
 
@@ -68,15 +69,16 @@ input[type="text"] {
   height:80px;
   font-size: 40px;
   padding: 0 10px;
+  margin-top: 10px;
 }
 
 input[type="submit"].choose {
-  color:white;
+  color:#CCC;
   display: block;
   width: 100%;
   height: 100%;
   display: inline;
-  font-family: Futura;
+  font-family: bebas_neueregular;
   font-size: 50px;
 }
 
@@ -85,7 +87,7 @@ input[type="submit"].choose:hover {
   display: block;
   width: 100%;
   display: inline;
-  font-family: Futura;
+  font-family: bebas_neueregular;
   font-size: 50px;
 }
 
@@ -191,30 +193,37 @@ input:focus {
 }
 
 .intro_text {
-    margin-top: 30px;
-    font-family: PlainBlackWide;
-    font-size:300%;
+    margin-top: 100px;
+    font-family: bebas_neueregular;
+    font-size:400%;
 }
 
-@media only screen and (max-width : 320px) {
+@media only screen and (min-width : 0) and (max-width : 480px) {
   .intro_text {
     font-size:300%;
   }
   .bird-background {
-    background-image: url('iphone5_back.jpg');
+    background-image: none;
   }
 }
 
-@media only screen and (min-width : 481px) and (max-width : 799px) {
+
+@media only screen and (min-width : 481px) and (max-width : 979px) {
   .intro_text {
     font-size:300%;
+    margin-top: 60px;
+  }
+  .bird-background {
+    background-image: url('bird-768.jpg');
   }
 }
 
-
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width : 980px) and (max-width: 1280px) {
   .intro_text {
     font-size:400%;
+  }
+  .bird-background {
+    background-image: url('bird-1280.jpg');
   }
 }
 
@@ -224,11 +233,8 @@ input:focus {
     position: absolute;
 }
 
-.login-form {
-}
-
 input[type=submit].splash-submit {
-    position: absolute; left: -9999px;
+  position: absolute; left: -9999px;
 }
 
 .edit_turn {
@@ -238,11 +244,12 @@ input[type=submit].splash-submit {
 }
 
 .tweet_bubble {
-  font-family: PlainBlackWide;
+  font-family: bebas_neueregular;
+  line-height: 1.5em;
   font-size:1em;
   position: absolute;
   left:30px;
-  top:120px;
+  top:100px;
   font-size:26px;
   width:350px;
   color: white;
@@ -255,8 +262,8 @@ input[type=submit].splash-submit {
 }
 
 .follow-like {
-width:150px;
-display:inline-block;
+  width:150px;
+  display:inline-block;
 }
 
 .edit_game {
@@ -267,12 +274,15 @@ display:inline-block;
 }
 
 .tweet-button {
-position: absolute;
-left:288px;
-display:block;
+  position: absolute;
+  left:288px;
+  display:block;
 }
 
-body {
-    margin: 0 auto;
-    max-width: 1600px;
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
