--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
 <div class="bird-background">
   <div class="row-fluid">
-    <div class="span4 offset8 intro_text">Rapper or Bird</div>
+    <div class="span6 offset1 intro_text">Rapper or Bird?</div>
   </div>
   <div class="row-fluid login-form">
-    <div class="span4 offset8 form">
+    <div class="span6 offset1 form">
       <%= form_for :game, url: games_path do |f| %>
         <%= f.text_field :text, placeholder: "Your Name", :autofocus=>true%>
         <%= f.submit "Start game", class: "btn splash-submit" %>
